# ask-github

./: LICENSE  README.md  pyproject.toml
docs/: prompts.md  usage.md
src/ask_github/: __init__.py  cli.py  github.py  gitlab.py
