[project]
name = "ask-github"
version = "0.1.0"
description = "Ask questions about GitHub repositories using AI"
readme = "README.md"
authors = [
    { name = "Srihari Sriraman", email = "srihari@nilenso.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ask-github = "ask_github.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
